# dragster

./: .gitignore  .worktreeinclude  CHANGELOG.md  README.md  pyproject.toml
.agents/skills/: liteparse  search-knowledge-base  setup-knowledge-base
.config/: wt.toml
.github/workflows/: release-please.yml  test-skills.yml
docs/: integration-guide.md  manual-skill-testing-plan.md  qmd-setup.md
ingest-documents/: SKILL.md
scripts/: delete_judge_agents.py
setup-knowledge-base/: SKILL.md
skills/memory/: SKILL.md
skills/parse/: SKILL.md
skills/rag-index/: SKILL.md
skills/rag-parse/: SKILL.md
skills/rag-search/: SKILL.md
skills/rag-tracking/: SKILL.md
skills/search/: SKILL.md
skills/search-knowledge-base/: SKILL.md
skills/setup/: SKILL.md
skills/setup-knowledge-base/: SKILL.md
tests/: test_skills_manual.py
tests/evals/: agent_factory.py  dataset.jsonl  rubric.txt  suite.yaml
